resources/css/todo_item.css
.todo-item {
    /* --focus-color:0, 255, 255;
    --unfocus-color:0, 0, 139; */
    padding:10px;
}

.todo-item .container{
    background-color:rgba(var(--focus-color),.5);
    border-radius:40px;
    display:flex;
    flex-wrap:wrap;
    justify-content:center;
    padding:40px;
    gap:10px;
    box-shadow:0 0 70px -20px #000;
    color:rgb(var(--focus-color));
}
@media screen and (max-width:500px) {
    .todo-item .container{
        padding:10px;
        border-radius:30px;
    }
    
}


.todo-item .container *{
    margin:0;
    padding:10px;
}

.todo-item .container *::selection{
    background-color:rgb(var(--focus-color));
    color:rgb(var(--unfocus-color));
}
.todo-item .container > *{
    flex-grow:1;
    background-color:rgba(var(--focus-color),.7);
    color:rgb(var(--unfocus-color));
    border-radius:20px;
}

.todo-item .container .title {
    word-break: break-all;
    flex-grow:1;
    background:none;
    color:rgb(var(--focus-color));
}

.todo-item .container .status {
    text-align:center;
    flex-grow:0;
}

.todo-item .container .description {
    word-break: break-all;
    width:100%;
    min-height:100px;
    height:auto;
    max-height:300px;

    transition:all 1s linear;
    white-space:pre-line;
    overflow:auto;
}

.todo-item .container .description::-webkit-scrollbar{
    width:10px;
}
.todo-item .container .description::-webkit-scrollbar-thumb{
    background-color:rgba(var(--unfocus-color),.3);
    border-radius:20px;
}
.todo-item .container .description::-webkit-scrollbar-thumb:active{
    background-color:rgb(var(--unfocus-color));
}

.todo-item .container .delete {
    width: 100%;
    background-color: rgb(var(--danger-color))
}

.todo-item .container .edit {
    width: 100%;
    background-color: rgb(var(--warning-color))
}

.todo-item .container .delete ,.todo-item .container .edit {
    padding: 0
}

.todo-item .container .delete a ,.todo-item .container .edit a{
    padding: 0;
    height: fit-content;
    line-height: 0
}

.todo-item .container .delete a h2 ,.todo-item .container .edit a h2{
    padding: 30px;
    margin: 0
}

.no-todo-item {
    align-self:center;
}

